# isca_emulation

./: .env.example  .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
artifacts/: README.md
config_data/: cnn2d_preprocess.yaml  cnn2d_preprocess_with_ssw_4618_to_4698_test_only.yaml  cnn3d_preprocess.yaml  cnn3d_preprocess_with_ssw_4618_to_4698_test_only.yaml  gnn2d_preprocess.yaml  gnn2d_preprocess_with_ssw_4618_to_4698_test_only.yaml  mesh_gnn_preprocess.yaml  mesh_gnn_preprocess_with_ssw_4618_to_4698_test_only.yaml
config_inference/: cnn2d_4618_to_4698.yaml  cnn3d_4618_to_4698.yaml  default.yaml  gnns_4618_to_4698.yaml
config_train/: hydra_config.yaml
config_train/model/: cnn2d.yaml  cnn2d_sweep.yaml  cnn2d_unet.yaml  cnn2d_unet_sweep.yaml  cnn3d.yaml  cnn3d_sweep.yaml  cnn3d_unet.yaml  cnn3d_unet_sweep.yaml  gnn2d_gatedgcn.yaml  gnn2d_gatedgcn_sweep.yaml  mesh_gnn2d.yaml  mesh_gnn2d_sweep.yaml  transformer2d_global_attention.yaml  transformer2d_global_attention_sweep.yaml  transformer2d_swin.yaml  transformer2d_swin_sweep.yaml  transformer3d_global_attention.yaml  transformer3d_global_attention_sweep.yaml  transformer3d_swin.yaml  transformer3d_swin_sweep.yaml
data/: README.md
notebooks/: analysis_isca_data.ipynb
results/: README.md
tests/: check_stats_nan_safe.py  test_cnn_coord_channels.py  test_gnn2d_preprocess.py  test_mesh_gnn_model.py  test_mesh_gnn_preprocess.py  test_notebook_plot_utils.py  test_plotting_absolute_vorticity.py  test_transformer2d_forecaster.py  test_transformer3d_forecaster.py
wandb/: README.md
(+77 files in other folders)
